# Core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  WHITEPAPER.md  WHITEPAPER.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/api/: README.md
docs/architecture/: README.md
docs/contributing/: README.md
docs/deployment/: README.md
docs/security/: README.md
examples/python/: example.py
examples/rust/: main.rs
examples/typescript/: example.ts
src/: lib.rs
src/bindings/: c.rs  mod.rs  python.rs  typescript.rs
src/crypto/: lib.rs  mod.rs
tests/integration/: signature.rs
tests/performance/: benchmark.rs
tests/security/: security.rs
tests/unit/: key_management.rs
