[package]
name = "quantumsafe-finance"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10.0"
hmac = "0.12.0"
crypto-mac = "0.11.0"
pyo3 = "0.19.0"
bindgen = "0.62.0"
rand = "0.8"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
base64 = "0.21.0"

[lib]
crate-type = ["rlib", "cdylib"]
